--- a/.github/workflows/check-in-job.yml
+++ b/.github/workflows/check-in-job.yml
@@ -33,3 +33,6 @@ jobs:
         PASSWORD: ${{ secrets.PASSWORD }}
         TG_TOKEN: ${{ secrets.TG_TOKEN }}
         TG_ID: ${{ secrets.TG_ID }}
+        # 新增 Gotify 两个核心环境变量（与代码配置对应）
+        GOTIFY_URL: ${{ secrets.GOTIFY_URL }}
+        GOTIFY_TOKEN: ${{ secrets.GOTIFY_TOKEN }}
